--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4795,7 +4795,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 3** Your answer here"
+    "A: 3 The Original data set had 330 rows and 27 columns. The 27 columns related to different information for each resort while the rows stored each resort. The first task was to determine if the Big Mountain Resort was listed amongst the columns and it was in row 151. The second task was to determine what information was actually missing from the data set. Unfortunately, I was missing pertinent information including the prices for weekdays and weekends for roughly 15-16% of the resorts. There was a significant amount of information missing from the fastEight column so the entire column was dropped. There were also several resorts missing information on pricing. Only the rows with missing both the weekday and weekend prices were removed. There were also a few locations in the data where information was improperly marked down, including one data point in the years open column that was input as 2019. Obviously, this resort cannot be that old. Still, there are a few missing data pieces, but I moved forward. \n",
+    "When modeling the ticket price will be the relationship between weekday and weekend prices. Big Mountain Resort is in Montana and most of the resorts in Montana use the same pricing for both weekday and weekend prices. However it is fair to note that the overall data set is missing 4 weekend and 7 week day prices for some of the resorts. The decision was then made to drop the weekday prices as there were more of missing values. Then to drop the 4 resorts missing Weekend prices. This resulted in a data set of 25 columns and 277 rows."
    ]
   },
   {
