--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -3960,7 +3960,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** To help evaluate the data the number of resorts per capita and the number of resorts per square mile were looked at. A histogram was made for both of these and there is clearly a structure to them though they do have a longer tail as both the population and the milage increase.\n",
+    "Shorting the data showed that the majority of the states with the most resorts per square miles are located in the smaller states of New England. But the resorts per capita are more spread out. Montana being one of the top 5. Principle component analysis was then performed on the data that had been scaled. The first 4 components account for 95% of the data, but only the first two accounts for about 75% of the data. Looking at a plot of the first and second principle component, you can see the majority cluster together and there are clear outliers. Then looking at a histogram of the average price per state you can see almost a bimodal plot. \n",
+    "\n",
+    "Making a table of PC1, PC2, state, price and quartiles, it was evident that Rhode Island was missing the ticket price for the Adult weekend. ‘NA’ was placed in the place of the Quartile and the price so that RI did not need to be removed. When using the ticket price as a size for the markers on the PC2vs PC2 plot, no real pattern showed. It appears that the resorts per capita and resorts per 100 square km is important to the PCs.\n",
+    "A heat map was then generated. There is a a few things that stand out with the Ticket price including the fastQuads, Runs, and snow making. Night skiing also seems to be important. Plotting the ticket price with the different components, there is a strong correlation for ticket price and the following vertical drop, fastQuads, and total chairs. The ratio of chairs to runs, chairs to skiable area, and fastQuads to runs and fastQuads to skiable are was then taken. There appears to be a relationship with the having lower numbers of lifts increase prices because there is less ability to move customers, but as you increase the number of lifts more customers can partake and the price can lower. Having No fast quads also appears to limit ticket price."
    ]
   },
   {
