--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -3840,7 +3840,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "A:In this notebook I learned a good idea of how models perform. First using just the average price. To build the model it is important to have a training and a testing group to ensure that you do not over fit a model. Which is why the data was split into 193 resorts for the training data and 35 for testing (70-30 split). Using the Dumy regressor I was able to guess the mean of the training data. When looking at the R^2 of the data. You can see that it is 0, an R^2 of 1 is the best correlation. When calculating the absolute mean error, I found it to be ~19 for the test data and that means I might be around $19 off the correct price. With sklearn, I was able to extract this information without needing to define functions each time I wanted to use them.\n",
+    "Using the StandardScalar, I was able to scale the data to a mean and std of 0. Using the scaled data for X, the R^2 was over 80% and 70% for the training and test data. Doing this lowered the Mean Absolute Errors to about $9 for both training and test data, which is much better than the original $19. There is a chance I was over fitting the data, so I used sklearn’s pipeline. I chose to give it a k of 15 since 10 did not look great. When looking at different values of k, a variety of ks were tested an 8 had the least variance and the highest r^2. Viewing the features of the regression, the variable with the largest positive is vertical drop followed by snow making, total chairs, fast quads and runs. The skiable terrain was a negative value. This could be due to these resorts being able to accommodate a larger number of people thus being able to charge less. Looking at the random forest model, the most important feature was fast quads and runs, followed bt snow making and vertical drop."
    ]
   }
  ],
